ajuste comparacao nome distribuidor com zeros a esquerda